--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -89,6 +89,11 @@ body{
   transition: .5s;
 }
 
+.menu-button.clicked{
+  background: rgba(255,255,255,0.85);
+
+}
+
 .menu-button:hover::before{
   left:100%;
 }
@@ -299,33 +304,13 @@ fieldset{
   padding: 10px;
 }
 
-
-#deck-grid-container {
+.deck-grid-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
-  overflow-x: auto;
+  justify-content: center; /* Align items horizontally at the center */
+  align-items: center; /* Align items vertically at the center */
 }
 
-#deck-grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 10px;
-  overflow-x: auto;
+figure {
+  margin-right: 10px;
 }
 
-.deck-grid-item {
-  border: 1px solid black;
-  padding: 10px;
-  background-image: url('../images/background.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 200px;
-  flex: 0 0 calc(33.33% - 10px);
-  margin-bottom: 20px; /* Increase the vertical spacing between rows */
-}
