--- a/SneakerCards/templates/SneakerCards/view_cards.html
+++ b/SneakerCards/templates/SneakerCards/view_cards.html
@@ -5,30 +5,26 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
 {% endblock head %}
 {% block userContent %}
-    <div class="content">
-              <main class="page-main">
-                <div class="content">
                     <!-- Slideshow container -->
                     <div class="slideshow-container">
                         {%  for card in cards %}
-                            <script> showSlides(slideIndex)</script>
+
                             <!-- Full-width images with number and caption text -->
                             <div class="mySlides fade">
                                 <p> {{ card.name }} </p>
                                 <img src=" {{card.image}} " alt="{{ card.description }}">
+                                {% if source == 'view_deck' %}
+                                    <div class="related-widget-wrapper">
+                                        <a href="{% url 'SneakerCards:my_deck' %}">Back to Decks</a>
+                                    </div>
+                                {% endif %}
                             </div>
                         {% endfor %}
                       <!-- Next and previous buttons -->
                       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                       <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
-                    <br>
-                </div>
-              {% if source == 'view_deck' %}
-                    <a href="{% url 'SneakerCards:my_deck' %}">Back to Decks</a>
-                {% endif %}
-              </main>
-        </div>
+    <script> showSlides(slideIndex)</script>
     <script src="{% static 'SneakerCards/js/functions.js' %}"></script>
 {% endblock userContent %}
 
