--- a/SneakerCards/templates/SneakerCards/view_deck_cards.html
+++ b/SneakerCards/templates/SneakerCards/view_deck_cards.html
@@ -5,31 +5,27 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
 {% endblock head %}
 {% block userContent %}
-    {% load static %}
-    <div class="content">
-              <main class="page-main">
-                <div class="content">
-                    <!-- Slideshow container -->
-                    <div class="slideshow-container">
-                        {%  for card in cards %}
-                            <script> showSlides(slideIndex)</script>
-                            <!-- Full-width images with number and caption text -->
-                            <div class="mySlides fade">
-                                <p> {{ card.name }} </p>
-                                <img src="{{ card.image }}  " alt="{{ card.description }}">
+    {% if cards %}
+                <div class="slideshow-container">
+                    {%  for card in cards %}
+                        <!-- Full-width images with number and caption text -->
+                        <div class="mySlides fade">
+                            <p> {{ card.name }} </p>
+                            <img src="../../{{ card.image }}/  " alt="{{ card.description }}">
+                            <div class="related-widget-wrapper">
+                                <a href="{% url 'SneakerCards:my_deck' %}">Back to Decks</a><br>
+                                <a href="{% url 'SneakerCards:sell_card' card.id deck.id %}">Sell Card</a><br>
                             </div>
-                        {% endfor %}
-                      <!-- Next and previous buttons -->
-                      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    </div>
-                    <br>
-
+                        </div>
+                    {% endfor %}
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
-                    <a href="{% url 'SneakerCards:my_deck' %}">Back to Decks</a><br>
-                    <a href="{% url 'SneakerCards:index' %}">Trade card</a>
-              </main>
-        </div>
+    {% else %}
+        <p> You have no cards in this deck </p>
+    {% endif %}
+    <script> showSlides(slideIndex)</script>
     <script src="{% static 'SneakerCards/js/functions.js' %}"></script>
 {% endblock userContent %}
 
