--- a/SneakerCards/templates/SneakerCards/buy_booster.html
+++ b/SneakerCards/templates/SneakerCards/buy_booster.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="booster_option_container">
-                 <a href=""><img src="{% static 'SneakerCards/images/monach_crown.png' %}" alt="Monarch Crown Booster" style="width:190px;height:200px;"></a>
+                 <a href="{% url 'SneakerCards:openBooster'%}?source=monarch"><img src="{% static 'SneakerCards/images/monach_crown.png' %}" alt="Monarch Crown Booster" style="width:190px;height:200px;"></a>
                  <div class="booster_description">
                     <p style="text-align: center"><b>Monarch Booster</b></p>
                     <p>Booster with a <b>better</b> chance to win rare cards</p>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="booster_option_container">
-                 <a href=""><img src="{% static 'SneakerCards/images/skull_crown.png' %}" alt="Skull Crown Booster" style="width:225px;height:200px;"></a>
+                 <a href="{% url 'SneakerCards:openBooster'%}?source=king"><img src="{% static 'SneakerCards/images/skull_crown.png' %}" alt="Skull Crown Booster" style="width:225px;height:200px;"></a>
                   <div class="booster_description">
                     <p style="text-align: center"><b>Skull King Booster</b></p>
                     <p>Booster with a <b>good</b> chance to win rare cards</p>
