--- a/SneakerCards/templates/SneakerCards/template.html
+++ b/SneakerCards/templates/SneakerCards/template.html
@@ -16,29 +16,28 @@
 
     <nav class="page-leftbar">
         {% csrf_token %}
-
         <form method="get" action="{% url 'SneakerCards:index' %}">
-            <button type="submit" class="menu-button">Home</button>
+            <button type="submit" class="btn">Home</button>
         </form>
         <form method="get" action="{% url 'SneakerCards:about' %}">
-            <button type="submit" class="menu-button">About</button>
+            <button type="submit" class="btn">About</button>
         </form>
         {% if user.is_authenticated %}
             <form method="get" action="{% url 'SneakerCards:dashboard' %}">
-                <button type="submit" name="Dashboard" class="menu-button">Dashboard</button>
+                <button type="submit" name="Dashboard" class="btn">Dashboard</button>
             </form>
             <form method="get" action="{% url 'SneakerCards:view_cards' %}">
-                <button type="submit" name ="SnakerDex" class="menu-button">SneakerDex</button>
+                <button type="submit" name ="SnakerDex" class="btn">SneakerDex</button>
             </form>
             <form method="get" action="{% url 'SneakerCards:logout' %}">
-                <button type="submit" name="Logout" class="menu-button">Logout</button>
+                <button type="submit" name="Logout" class="btn">Logout</button>
             </form>
         {% else %}
             <form method="get" action="{% url 'SneakerCards:register' %}">
-                <button name ="Register" type="submit" class="menu-button">Register</button>
+                <button name ="Register" type="submit" class="btn">Register</button>
             </form>
             <form method="get" action="{% url 'SneakerCards:login' %}">
-                <button name ="Login" type="submit" class="menu-button">Login</button>
+                <button name ="Login" type="submit" class="btn">Login</button>
             </form>
         {% endif %}
     </nav>
