--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -244,7 +244,7 @@ body {
 
 fieldset {
     background-color: rgba(120, 120, 120, 0.8);
-    color=black;
+    color : black;
 }
 
 .booster_container {
@@ -348,8 +348,13 @@ figure {
 
 /*cada deck individualmente*/
 .deck-grid-item {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px;
+}
+
+.profile-pic{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
 }
