--- a/SneakerCards/templates/SneakerCards/template.html
+++ b/SneakerCards/templates/SneakerCards/template.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'SneakerCards/css/main.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link href="https://fonts.cdnfonts.com/css/lucida-handwriting-std" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'SneakerCards/images/favicon.png' %}" type="image/x-icon">
 </head>
 <div class="grid">
     <header class="page-header">
