--- a/SneakerCards/templates/SneakerCards/about.html
+++ b/SneakerCards/templates/SneakerCards/about.html
@@ -1,5 +1,5 @@
-{% extends "SneakerCards/template.html" %}
-{% block content %}
+{% extends "SneakerCards/logged_template.html" %}
+{% block userContent %}
     {% if error_message %}
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
@@ -19,4 +19,4 @@
         </div>
     </div>
 
-{% endblock content %}
+{% endblock userContent %}
