--- a/SneakerCards/templates/SneakerCards/buy_booster.html
+++ b/SneakerCards/templates/SneakerCards/buy_booster.html
@@ -54,9 +54,11 @@
                 </div>
             </div>
             <div class="booster_option_container">
-                <a href="http://localhost:3000?id={{ userInfo.collector.user_id}}"><img src="{% static 'SneakerCards/images/game.png' %}" alt="Win credits" style="width:225px;height:200px;"></a>
+                <a href="http://localhost:3000?id={{ userInfo.collector.user_id}}"><img src="{% static 'SneakerCards/images/game.png' %}" alt="Win credits" style="width:205px;height:180px;"></a>
                 <div class="booster_description">
                     <p style="text-align: center"><b>Play & Win credits</b></p>
+                    <p style="text-align: center"><p>Play a fun and quick game to win credits</p>
+                    <p style="text-align: center"><p>Win up to 120 credits</p>
             </div>
 
 
