--- a/SneakerCards/templates/SneakerCards/about.html
+++ b/SneakerCards/templates/SneakerCards/about.html
@@ -5,16 +5,17 @@
     {% endif %}
     <div class="index_about_text_container">
         <div class="index_about_text">
+            <br>
             <p> This site was built for the purpose of a final project in a College class.</p>
             <p> The class 'Development for the internet e mobile applications' teaches mainly DJANGO an REACT
                 which were applied here.</p>
-            <p> All site was built in DJANGO and the memory game in REACT.</p>
-            <br>
+            <p> All site was built in DJANGO and the memory game in REACT by:</p>
             <ul>
                 <li>94514 - Bruno Carvalheiro</li>
                 <li>94587 - Nuno Monteiro</li>
                 <li>98494 - Carolina Roque</li>
             </ul>
+            <br>
 
         </div>
     </div>
