--- a/SneakerCards/templates/SneakerCards/index.html
+++ b/SneakerCards/templates/SneakerCards/index.html
@@ -1,7 +1,7 @@
 {%  extends 'SneakerCards/logged_template.html' %}
 {% block userContent %}
 
-    <div index_about_text_container>
+    <div class ="index_about_text_container">
         <div class="welcome">
         {%  if request.session.username %}
             <p>Welcome {{ request.session.username }}</p>
